unpackaged/main/default/objects/ETT_Inspection_Card__c/ETT_Inspection_Card__c.object-meta.xml
<CustomObject>
    <description>This is for inspection for the customer who has been requested orders.</description>
    <label>Tyre Inspection Card</label>
    <nameField>
        <displayFormat>IC-{0000}</displayFormat>
        <label>Inspection Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tyre Inspection Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>