unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Account__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>