unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Brand__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipName>Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>