unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Chalk_Crayon_Yellow__c.field-meta.xml
<CustomField>
    <fullName>ETT_Chalk_Crayon_Yellow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chalk / Crayon - Yellow</label>
    <type>Checkbox</type>
</CustomField>