unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Collection_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Card</label>
    <referenceTo>ETT_Collection_Card__c</referenceTo>
    <relationshipName>Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>