unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Collection_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipName>Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>