unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Contact__c.field-meta.xml
<CustomField>
    <fullName>ETT_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tyre Inspection Cards</relationshipLabel>
    <relationshipName>Tyre_Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>