unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Cutting_Player__c.field-meta.xml
<CustomField>
    <fullName>ETT_Cutting_Player__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cutting Player</label>
    <type>Checkbox</type>
</CustomField>