unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Electrical_Prob_In_Working_Condition__c.field-meta.xml
<CustomField>
    <fullName>ETT_Electrical_Prob_In_Working_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electrical Prob In Working Condition</label>
    <type>Checkbox</type>
</CustomField>