unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_End_Time__c.field-meta.xml
<CustomField>
    <fullName>ETT_End_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>