unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Estimate_Quotation__c.field-meta.xml
<CustomField>
    <fullName>ETT_Estimate_Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate Quotation</label>
    <referenceTo>ETT_Estimate_Quotation__c</referenceTo>
    <relationshipName>Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>