unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Handheld_Drop_Light__c.field-meta.xml
<CustomField>
    <fullName>ETT_Handheld_Drop_Light__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handheld Drop Light</label>
    <type>Checkbox</type>
</CustomField>