unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Industrial_Vacuum_Cleaner__c.field-meta.xml
<CustomField>
    <fullName>ETT_Industrial_Vacuum_Cleaner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Industrial Vacuum Cleaner</label>
    <type>Checkbox</type>
</CustomField>