unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Knife__c.field-meta.xml
<CustomField>
    <fullName>ETT_Knife__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knife</label>
    <type>Checkbox</type>
</CustomField>