unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Nail_Remover__c.field-meta.xml
<CustomField>
    <fullName>ETT_Nail_Remover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nail Remover</label>
    <type>Checkbox</type>
</CustomField>