unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Tyre Inspection Cards</relationshipLabel>
    <relationshipName>Inspection_Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>