unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Poking_Screwdriver__c.field-meta.xml
<CustomField>
    <fullName>ETT_Poking_Screwdriver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Poking Screwdriver</label>
    <type>Checkbox</type>
</CustomField>