unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Price_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Price_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Master</label>
    <referenceTo>ETT_Price_Master__c</referenceTo>
    <relationshipName>Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>