unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Priority__c.field-meta.xml
<CustomField>
    <fullName>ETT_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Priority</fullName>
            </value>
            <value>
                <fullName>2nd Priority</fullName>
            </value>
            <value>
                <fullName>3rd Priority</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>