unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ETT_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>