unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>ETT_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipName>Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>