unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Spiral_Cement_Tool__c.field-meta.xml
<CustomField>
    <fullName>ETT_Spiral_Cement_Tool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spiral Cement Tool</label>
    <type>Checkbox</type>
</CustomField>