unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Spreader_Light_Condition__c.field-meta.xml
<CustomField>
    <fullName>ETT_Spreader_Light_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spreader Light Condition</label>
    <type>Checkbox</type>
</CustomField>