unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Staple_Gun__c.field-meta.xml
<CustomField>
    <fullName>ETT_Staple_Gun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staple Gun</label>
    <type>Checkbox</type>
</CustomField>