unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Status__c.field-meta.xml
<CustomField>
    <fullName>ETT_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Inspected</fullName>
                <default>true</default>
                <label>Not Inspected</label>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Send Back</fullName>
            </value>
            <value>
                <fullName>Scrap</fullName>
            </value>
            <value>
                <fullName>Accepted/No Warranty</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>