unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Tyre__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre</label>
    <referenceTo>ETT_Tyre_Master__c</referenceTo>
    <relationshipName>Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>