unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Tyre_Lift_In_Working_Condition__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Lift_In_Working_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tyre Lift In Working Condition</label>
    <type>Checkbox</type>
</CustomField>