unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipName>Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>