unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/ETT_Tyre_Tapping_Tool__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Tapping_Tool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tyre Tapping Tool</label>
    <type>Checkbox</type>
</CustomField>