unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/Inspection_Technician__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tyre_Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>