unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <formula>Tyre_Inventory__r.ETT_Pattern__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pattern</label>
    <type>Text</type>
</CustomField>