unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/preApproval_Brand__c.field-meta.xml
<CustomField>
    <fullName>preApproval_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipLabel>Tyre Inspection Cards (preApproval_Brand)</relationshipLabel>
    <relationshipName>Tyre_Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>