unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/preApproval_Country__c.field-meta.xml
<CustomField>
    <fullName>preApproval_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>ETT_Country_Master__c</referenceTo>
    <relationshipLabel>Tyre Inspection Cards (preApproval_Country)</relationshipLabel>
    <relationshipName>Tyre_Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>