unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/preApproval_Pattern__c.field-meta.xml
<CustomField>
    <fullName>preApproval_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Tyre Inspection Cards (preApproval_Pattern)</relationshipLabel>
    <relationshipName>Tyre_Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>