unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/preApproval_TyreSize__c.field-meta.xml
<CustomField>
    <fullName>preApproval_TyreSize__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Tyre Inspection Cards (preApproval_TyreSize)</relationshipLabel>
    <relationshipName>Tyre_Inspection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>