unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <description>For Supplier Process</description>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>