unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/TempQuantity__c.field-meta.xml
<CustomField>
    <fullName>TempQuantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>TempQuantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>