unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/Tyre_Life__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Life__c</fullName>
    <formula>TEXT(Tyre_Inventory__r.ETT_Tyre_Life__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Life</label>
    <type>Text</type>
</CustomField>