unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/Tyre_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Serial_Number__c</fullName>
    <formula>Tyre_Inventory__r.ETT_Tyre_Serial_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Serial Number</label>
    <type>Text</type>
</CustomField>