unpackaged/main/default/objects/ETT_Inspection_Card__c/fields/Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Size__c</fullName>
    <formula>Tyre_Inventory__r.ETT_Tyre_Size_Master__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Size</label>
    <type>Text</type>
</CustomField>