unpackaged/main/default/objects/ETT_Inspection_Card__c/recordTypes/ETT_Tyre_Refurbishing_Services.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Refurbishing_Services</fullName>
    <active>true</active>
    <label>Tyre - Refurbishing Services</label>
</RecordType>