unpackaged/main/default/objects/ETT_Inspection_Card__c/recordTypes/Tyre_Supplier.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Supplier</fullName>
    <active>true</active>
    <label>Tyre Supplier</label>
</RecordType>