unpackaged/main/default/objects/ETT_Inspection_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETT_Collection_Card__c</columns>
    <columns>ETT_Status__c</columns>
    <columns>Tyre_Inventory__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>