unpackaged/main/default/objects/ETT_Inspection_Card__c/listViews/Tyre_Cash_Supplier.listView-meta.xml
<ListView>
    <fullName>Tyre_Cash_Supplier</fullName>
    <columns>NAME</columns>
    <columns>ETT_Status__c</columns>
    <columns>ETT_Collection_Card__c</columns>
    <columns>ETT_Brand__c</columns>
    <columns>ETT_Country__c</columns>
    <columns>ETT_Pattern__c</columns>
    <columns>ETT_Tyre_Size__c</columns>
    <columns>ETT_Tyre_Serial_Number__c</columns>
    <columns>ETT_Tyre_Life__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Tyre - Cash Supplier</label>
</ListView>